Update date format for portfolio items

--- a/portfolio/projects/2015/0717-Sflp.md
+++ b/portfolio/projects/2015/0717-Sflp.md
@@ -1,6 +1,6 @@
 ---
 title: Success For Little People
-date: "2015-07-17"
+date: "17 Jul 2015"
 description: Developed a website for Success for Little People - a non-profit organization,
   as a part of the hackathon event hosted by Charity-IT in Auckland from the 17th
   of July to 19th July 2015. We were a 7 member team inclusive of the product owner
